<resources>

    <!-- Activity Login -->
    <string name="app_name">Login</string>
    <string name="et_email">E-mail</string>
    <string name="et_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_text_registry">Do not have an account?</string>
    <string name="tv_registry"><u>Create an account</u></string>

    <!-- Registry activity -->
    <string name="et_name">Name</string>
    <string name="et_lastname">Last name</string>
    <string name="btn_registry">Create account</string>
    <string name="tv_registry_h">Account information</string>

</resources>