<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistryActivity"
    android:background="@drawable/background_gradient_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="15dp"
        android:text="@string/tv_registry_h"
        android:textAlignment="center"
        android:textSize="@dimen/registry_tv_titles"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registry_etPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/et_gray"
        android:hint="@string/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registry_etEmail">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registry_btnRegistry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/blue_ColumbiaBlue"
        android:text="@string/btn_registry"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registry_etPassword">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registry_etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/et_gray"
        android:hint="@string/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registry_etLastName">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registry_etLastName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/et_gray"
        android:hint="@string/et_lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registry_etName">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registry_etName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/et_gray"
        android:hint="@string/et_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registry_tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registry_btnRegistry"
        app:layout_constraintVertical_bias="0.36">

    </androidx.appcompat.widget.AppCompatTextView>

</androidx.constraintlayout.widget.ConstraintLayout>